--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,18 @@
 		</plugins>
 	</build>
 
+
+	<properties>
+		<spring-framework.version>4.3.16.RELEASE</spring-framework.version>
+		<spring-web.version>4.3.16.RELEASE</spring-web.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.0</version>
-			
+
 		</dependency>
 
 		<dependency>
@@ -52,12 +58,25 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-		
-			<dependency>
- 			<groupId>org.apache.logging.log4j</groupId>
- 			<artifactId>log4j-core</artifactId>
- 			<version>2.11.0</version>
- 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring-web.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
