--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<log4j-core.version>2.11.0</log4j-core.version>
 		<spring-framework.version>4.3.16.RELEASE</spring-framework.version>
 		<spring-web.version>4.3.16.RELEASE</spring-web.version>
+		<hibernate-core.version>4.3.11.Final</hibernate-core.version>
 
 	</properties>
 
@@ -83,6 +84,13 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring-web.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate-core.version}</version>
+		</dependency>
+
 
 
 	</dependencies>
